tests/errors/validation/init-at-top-level.fn
---
Description: Constructor declared at top level outside any type
Expected: compile error
---

init()
{
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
